--- a/src/App.css
+++ b/src/App.css
@@ -4,45 +4,41 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  background-color: dodgerblue;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  width: 100%;
+}
+section {
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  width:100%;
 }
-
-
 .NASAcard {
-  border: 1px solid black;
-  width: 50%;
+  border: 1px solid white;
+  background-color: navy;
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1.5rem;
+  border: 1px solid white;
 }
