--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,18 @@
 
 header {
   width: 100%;
+  margin-bottom: 3%;
 }
+
+.randomize {
+  font-size: 2rem;
+  border-radius: 1rem;
+  padding: 1rem;
+  box-shadow: 0 .5rem 1rem black;
+  color: white;
+  background-color: navy;
+}
+
 section {
   width:100%;
   display: flex;
@@ -38,7 +49,6 @@ footer {
 
 img {
   width: 100%;
-  height: 100%;
   border-radius: 1.5rem;
   border: 1px solid white;
 }
